# lioncrest-sandbox

./: .gitignore  README.md
lioncrest-extension/: index.html  package-lock.json  package.json  vite.config.ts
lioncrest-extension/public/: background.js  manifest.json
lioncrest-extension/src/: App.css  App.tsx  api.ts  index.css  types.ts
lioncrest-extension/src/components/: ExtractionPage.tsx  ResultsPage.tsx  SchemaDropdown.tsx
lioncrest-extension/src/extension/: useGmailContext.ts
lioncrest-extension/src/utils/: api.ts  decoding.ts
lioncrest-server/: README.md  logging_config.py  main.py  pyproject.toml
lioncrest-server/llm_utils/: agent.py  llm_utils.py
lioncrest-server/llm_utils/data_extractor/: extractor.py  schemas.py
lioncrest-server/llm_utils/schemas/: common.py  deal_flow.py  lp.py  network.py  vc_fund.py
lioncrest-server/services/: monday_client.py
